test/spec/imports.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/imports.wast
(;; STDOUT ;;;
assert_invalid error:
  out/third_party/testsuite/imports.wast:284:45: only one table allowed
  (module (import "" "" (table 10 anyfunc)) (import "" "" (table 10 anyfunc)))
                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/imports.wast:288:45: only one table allowed
  (module (import "" "" (table 10 anyfunc)) (table 10 anyfunc))
                                            ^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/imports.wast:292:30: only one table allowed
  (module (table 10 anyfunc) (table 10 anyfunc))
                             ^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/imports.wast:379:37: only one memory block allowed
  (module (import "" "" (memory 1)) (import "" "" (memory 1)))
                                    ^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/imports.wast:383:37: only one memory block allowed
  (module (import "" "" (memory 1)) (memory 0))
                                    ^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/imports.wast:387:22: only one memory block allowed
  (module (memory 0) (memory 0))
                     ^^^^^^^^^^
called host spectest.print(i32:13) =>
called host spectest.print(i32:14, f32:42) =>
called host spectest.print(i32:13) =>
called host spectest.print(i32:13) =>
called host spectest.print(f32:13) =>
called host spectest.print(i32:13) =>
called host spectest.print(i64:24) =>
called host spectest.print(f64:25, f64:53) =>
called host spectest.print(f64:24) =>
called host spectest.print(f64:24) =>
called host spectest.print(f64:24) =>
out/third_party/testsuite/imports.wast:86: assert_unlinkable passed:
  error: unknown module field "unknown"
  error: @0x0000001e: on_import callback failed
out/third_party/testsuite/imports.wast:90: assert_unlinkable passed:
  error: unknown host function import "spectest.unknown"
  error: @0x00000024: on_import_func callback failed
out/third_party/testsuite/imports.wast:95: assert_unlinkable passed:
  error: import signature mismatch
  error: @0x0000001e: on_import_func callback failed
out/third_party/testsuite/imports.wast:99: assert_unlinkable passed:
  error: import signature mismatch
  error: @0x0000001e: on_import_func callback failed
out/third_party/testsuite/imports.wast:103: assert_unlinkable passed:
  error: import signature mismatch
  error: @0x0000001f: on_import_func callback failed
out/third_party/testsuite/imports.wast:107: assert_unlinkable passed:
  error: import signature mismatch
  error: @0x00000021: on_import_func callback failed
out/third_party/testsuite/imports.wast:111: assert_unlinkable passed:
  error: import signature mismatch
  error: @0x00000022: on_import_func callback failed
out/third_party/testsuite/imports.wast:115: assert_unlinkable passed:
  error: import signature mismatch
  error: @0x00000022: on_import_func callback failed
out/third_party/testsuite/imports.wast:119: assert_unlinkable passed:
  error: import signature mismatch
  error: @0x00000022: on_import_func callback failed
out/third_party/testsuite/imports.wast:123: assert_unlinkable passed:
  error: import signature mismatch
  error: @0x00000023: on_import_func callback failed
out/third_party/testsuite/imports.wast:127: assert_unlinkable passed:
  error: import signature mismatch
  error: @0x00000022: on_import_func callback failed
out/third_party/testsuite/imports.wast:131: assert_unlinkable passed:
  error: import signature mismatch
  error: @0x00000023: on_import_func callback failed
out/third_party/testsuite/imports.wast:135: assert_unlinkable passed:
  error: import signature mismatch
  error: @0x00000023: on_import_func callback failed
out/third_party/testsuite/imports.wast:139: assert_unlinkable passed:
  error: import signature mismatch
  error: @0x00000023: on_import_func callback failed
out/third_party/testsuite/imports.wast:143: assert_unlinkable passed:
  error: import signature mismatch
  error: @0x00000024: on_import_func callback failed
out/third_party/testsuite/imports.wast:147: assert_unlinkable passed:
  error: import signature mismatch
  error: @0x00000026: on_import_func callback failed
out/third_party/testsuite/imports.wast:151: assert_unlinkable passed:
  error: import signature mismatch
  error: @0x00000027: on_import_func callback failed
out/third_party/testsuite/imports.wast:155: assert_unlinkable passed:
  error: import signature mismatch
  error: @0x00000027: on_import_func callback failed
out/third_party/testsuite/imports.wast:160: assert_unlinkable passed:
  error: expected import "test.global-i32" to have kind func, not global
  error: @0x00000024: on_import_func callback failed
out/third_party/testsuite/imports.wast:164: assert_unlinkable passed:
  error: expected import "test.table-10-inf" to have kind func, not table
  error: @0x00000025: on_import_func callback failed
out/third_party/testsuite/imports.wast:168: assert_unlinkable passed:
  error: expected import "test.memory-2-inf" to have kind func, not memory
  error: @0x00000025: on_import_func callback failed
out/third_party/testsuite/imports.wast:172: assert_unlinkable passed:
  error: unknown host function import "spectest.global"
  error: @0x00000023: on_import_func callback failed
out/third_party/testsuite/imports.wast:176: assert_unlinkable passed:
  error: unknown host function import "spectest.table"
  error: @0x00000022: on_import_func callback failed
out/third_party/testsuite/imports.wast:180: assert_unlinkable passed:
  error: unknown host function import "spectest.memory"
  error: @0x00000023: on_import_func callback failed
out/third_party/testsuite/imports.wast:213: assert_unlinkable passed:
  error: unknown module field "unknown"
  error: @0x00000018: on_import callback failed
out/third_party/testsuite/imports.wast:217: assert_unlinkable passed:
  error: unknown host global import "spectest.unknown"
  error: @0x0000001f: on_import_global callback failed
out/third_party/testsuite/imports.wast:222: assert_unlinkable passed:
  error: expected import "test.func" to have kind global, not func
  error: @0x00000018: on_import_global callback failed
out/third_party/testsuite/imports.wast:226: assert_unlinkable passed:
  error: expected import "test.table-10-inf" to have kind global, not table
  error: @0x00000020: on_import_global callback failed
out/third_party/testsuite/imports.wast:230: assert_unlinkable passed:
  error: expected import "test.memory-2-inf" to have kind global, not memory
  error: @0x00000020: on_import_global callback failed
out/third_party/testsuite/imports.wast:234: assert_unlinkable passed:
  error: unknown host global import "spectest.print"
  error: @0x0000001d: on_import_global callback failed
out/third_party/testsuite/imports.wast:238: assert_unlinkable passed:
  error: unknown host global import "spectest.table"
  error: @0x0000001d: on_import_global callback failed
out/third_party/testsuite/imports.wast:242: assert_unlinkable passed:
  error: unknown host global import "spectest.memory"
  error: @0x0000001e: on_import_global callback failed
out/third_party/testsuite/imports.wast:309: assert_unlinkable passed:
  error: unknown module field "unknown"
  error: @0x00000018: on_import callback failed
out/third_party/testsuite/imports.wast:313: assert_unlinkable passed:
  error: unknown host table import "spectest.unknown"
  error: @0x00000020: on_import_table callback failed
out/third_party/testsuite/imports.wast:318: assert_unlinkable passed:
  error: actual size (10) smaller than declared (12)
  error: @0x00000021: on_import_table callback failed
out/third_party/testsuite/imports.wast:322: assert_unlinkable passed:
  error: max size (unspecified) larger than declared (20)
  error: @0x00000022: on_import_table callback failed
out/third_party/testsuite/imports.wast:326: assert_unlinkable passed:
  error: actual size (10) smaller than declared (12)
  error: @0x0000001e: on_import_table callback failed
out/third_party/testsuite/imports.wast:330: assert_unlinkable passed:
  error: max size (20) larger than declared (15)
  error: @0x0000001f: on_import_table callback failed
out/third_party/testsuite/imports.wast:335: assert_unlinkable passed:
  error: expected import "test.func" to have kind table, not func
  error: @0x00000019: on_import_table callback failed
out/third_party/testsuite/imports.wast:339: assert_unlinkable passed:
  error: expected import "test.global-i32" to have kind table, not global
  error: @0x0000001f: on_import_table callback failed
out/third_party/testsuite/imports.wast:343: assert_unlinkable passed:
  error: expected import "test.memory-2-inf" to have kind table, not memory
  error: @0x00000021: on_import_table callback failed
out/third_party/testsuite/imports.wast:347: assert_unlinkable passed:
  error: unknown host table import "spectest.print"
  error: @0x0000001e: on_import_table callback failed
out/third_party/testsuite/imports.wast:402: assert_unlinkable passed:
  error: unknown module field "unknown"
  error: @0x00000018: on_import callback failed
out/third_party/testsuite/imports.wast:406: assert_unlinkable passed:
  error: unknown host memory import "spectest.unknown"
  error: @0x0000001f: on_import_memory callback failed
out/third_party/testsuite/imports.wast:411: assert_unlinkable passed:
  error: actual size (2) smaller than declared (3)
  error: @0x00000020: on_import_memory callback failed
out/third_party/testsuite/imports.wast:415: assert_unlinkable passed:
  error: max size (unspecified) larger than declared (3)
  error: @0x00000021: on_import_memory callback failed
out/third_party/testsuite/imports.wast:419: assert_unlinkable passed:
  error: actual size (1) smaller than declared (2)
  error: @0x0000001e: on_import_memory callback failed
out/third_party/testsuite/imports.wast:423: assert_unlinkable passed:
  error: max size (2) larger than declared (1)
  error: @0x0000001f: on_import_memory callback failed
out/third_party/testsuite/imports.wast:428: assert_unlinkable passed:
  error: expected import "test.func-i32" to have kind memory, not func
  error: @0x0000001c: on_import_memory callback failed
out/third_party/testsuite/imports.wast:432: assert_unlinkable passed:
  error: expected import "test.global-i32" to have kind memory, not global
  error: @0x0000001e: on_import_memory callback failed
out/third_party/testsuite/imports.wast:436: assert_unlinkable passed:
  error: expected import "test.table-10-inf" to have kind memory, not table
  error: @0x00000020: on_import_memory callback failed
out/third_party/testsuite/imports.wast:440: assert_unlinkable passed:
  error: unknown host memory import "spectest.print"
  error: @0x0000001d: on_import_memory callback failed
out/third_party/testsuite/imports.wast:444: assert_unlinkable passed:
  error: unknown host memory import "spectest.global"
  error: @0x0000001e: on_import_memory callback failed
out/third_party/testsuite/imports.wast:448: assert_unlinkable passed:
  error: unknown host memory import "spectest.table"
  error: @0x0000001d: on_import_memory callback failed
out/third_party/testsuite/imports.wast:453: assert_unlinkable passed:
  error: actual size (1) smaller than declared (2)
  error: @0x0000001e: on_import_memory callback failed
out/third_party/testsuite/imports.wast:457: assert_unlinkable passed:
  error: max size (2) larger than declared (1)
  error: @0x0000001f: on_import_memory callback failed
85/85 tests passed.
;;; STDOUT ;;)
